add header to urls_index.ejs , urls_show.ejs from _header.ejs

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -16,6 +16,15 @@
     />
     <title>TinyApp</title>
   </head>
+
+
+
+<!-- add header that call from _header.ejs -->
+  <%- include('partials/_header') %>
+
+
+
+
   <body>
     <main style="margin: 1em;">
       <h3>My URLs</h3>
