--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -11,6 +11,11 @@
     <title>URL - TinyApp Example</title>
   </head>
 
+
+<!-- add header that call from _header.ejs -->
+  <%- include('partials/_header') %>
+
+
   <body>
     <div class="card text-center">
       <div class="card-header"></div>
