--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,6 +32,7 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
@@ -40,6 +41,7 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td><a href="/urls/<%=id%>"> <button> Edit </button> </a></td>
               <td><form method="POST" action="/urls/<%=id%>/delete"><button type="submit">Delete</button></form></td>
             </tr>
           <% } %>
