--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,12 +12,22 @@
 
 
         <td>
-          <form method="POST" action="/login">
-            <label>Username</label>
-            <input type="text" name="username">
-            <button type="submit"> Login </button>
-          </form>
+          <% if(username){ %>
+            <form method="POST" action="/logout">
+              <label>Longed in as: <%= username %></label>
+              <button type="submit"> Logout </button>
+            </form>
+            <% } else { %>
+              <form method="POST" action="/login">
+                <label>Username</label>
+                <input type="text" name="username">
+                <button type="submit"> Login </button>
+                <h4>Your are: <%= username %>
+                </h4>
+              </form>
+              <% } %>
         </td>
+
 
 
       </div>
