--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -12,16 +12,16 @@
   <div class="card text-left">
     <div class="card-header"></div>
     <div class="card-body">
-      <h1 class="card-title">Create Account</h1>
+      <h1 class="card-title">Login</h1>
     </div>
   <div class="card-footer text-muted">
     <div class="card-body">
-        <h6 class="card-title">Thanks for using TinyApp!</h6>
+        <h6 class="card-title">Welcome</h6>
         <p class="card-text">
-          <form class="bodyForm" action="/register" method="POST">
+          <form class="bodyForm" action="/login" method="POST">
             <div class="input-group mb-3">
               <div class="input-group-prepend">
-                <label for="email" class="input-group-text" id="inputGroup-sizing-default">Email </label>
+                <label for="email" class="input-group-text" id="inputGroup-sizing-default">Email</label>
               </div>
               <input name="email" type="email" placeholder="&emsp;&emsp;Email" />
             </div>
@@ -31,13 +31,12 @@
               </div>
               <input name="password" type="password" placeholder="&emsp;&emsp;Password" />
             </div>
-            <button class="btn btn-primary" type="submit">Register</button>
+            <button class="btn btn-primary" type="submit">Login</button>
           </form>
         </p>
     </div>
   </div>
 </div>
-    
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -48,6 +47,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"></script>
+
 </body>
 
 </html>
