--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -36,18 +36,22 @@
             <th scope="col">Delete</th>
           </tr>
         </thead>
+
         <tbody>
-          <% for (let id in urls) { %>
+          <% for(let url in urls) { %>
             <tr>
-              <td><%= id %></td>
-              <td><%= urls[id] %></td>
-              <td><a href="/urls/<%=id%>"> <button> Edit </button> </a></td>
-              <td><form method="POST" action="/urls/<%=id%>/delete"><button type="submit">Delete</button></form></td>
+              <td><%= url %></td>
+              <td><%= urls[url] %></td>
+              <td><a href="/urls/<%=url%>"> <button type="submit" value="Update" class="btn btn-outline-primary"> Edit </button> </a></td>
+              
+              <td><form method="POST" action="/urls/<%=url%>/delete"><button type="submit" class="btn btn-outline-danger">Delete</button></form></td>
             </tr>
           <% } %>
         </tbody>
       </table>
+      <a href = "/urls/new"><button type="submit" class="btn btn-outline-primary">Shorten a New Link</button></a>
     </main>
+
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
