--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-      crossorigin="anonymous"
-    />
-    <title>TinyApp</title>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
+  <title>TinyApp</title>
+</head>
 
 
 
 
-  <body>
-    <!-- add header that call from _header.ejs -->
-    <%- include('partials/_header') %>
+<body>
+  <!-- add header that call from _header.ejs -->
+  <%- include('partials/_header') %>
 
-  
+
     <main style="margin: 1em;">
       <h3>My URLs</h3>
       <table class="table">
@@ -36,43 +30,43 @@
             <th scope="col">Delete</th>
           </tr>
         </thead>
-
         <tbody>
           <% for (let url in urlDatabase) { %>
-            <% if (user_id === urlDatabase[url].user_id) { %>
+            <% if (user_id===urlDatabase[url].user_id) { %>
               <tr>
-                <td><%= url %></td>
-                <td><%= urlDatabase[url].longURL %></td>
-                <td><form method="GET" action="/urls/<%=url%>"><button type="submit" value="update" class="btn btn-outline-primary">Edit</button></form>
-
-                <!--<td><a href="/urls/<%=url%>"> <button type="submit" value="Update" class="btn btn-outline-primary"> Edit </button> </a></td>-->
-              
-                <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-outline-primary">Delete</button></form>
+                <td>
+                  <%= url %>
+                </td>
+                <td>
+                  <%= urlDatabase[url].longURL %>
+                </td>
+                <td>
+                  <form method="GET" action="/urls/<%=url%>"><button type="submit" value="update"
+                      class="btn btn-outline-primary">Edit</button></form>
+                  <!--<td><a href="/urls/<%=url%>"> <button type="submit" value="Update" class="btn btn-outline-primary"> Edit </button> </a></td>-->
+                </td>
+                <td>
+                  <form method="POST" action="/urls/<%=url%>/delete"><button type="submit"
+                      class="btn btn-outline-danger">Delete</button></form>
                 </td>
               </tr>
-               <% } %>
-            <% }; %>
-
+              <% } %>
+                <% }; %>
         </tbody>
       </table>
-      <a href = "/urls/new"><button type="submit" class="btn btn-outline-primary">Shorten a New Link</button></a>
+      <a href="/urls/new"><button type="submit" class="btn btn-outline-primary">Shorten a New Link</button></a>
     </main>
 
     <!-- Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      crossorigin="anonymous"></script>
+</body>
+
 </html>
