--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -13,25 +13,30 @@
   <!-- add header that call from _header.ejs -->
   <%- include('partials/_header') %>
 
-  <div class="card text-center">
-    <div class="card-header"></div>
-    <div class="card-body">
-      <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-      <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
-      <p class="card-text">Long URL: <a href="<%= longURL %>"><%= longURL %></a></p>
-        <!--
-          New URL: <input  value="<%= longURL %>" type="text" name="longURL" placeholder="http://">
-        <button type="submit">Submit</button> -->
-
+    <div class="card text-center">
+      <div class="card-header"></div>
+      <div class="card-body">
+        <h5 class="card-title">TinyURL for: <%= longURL %>
+        </h5>
+        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>">
+            <%= shortURL %>
+          </a></p>
+        <p class="card-text">Long URL: <a href="<%= longURL %>">
+            <%= longURL %>
+          </a></p>
       </div>
       <div class="card-footer text-muted">
         <div class="card-body">
           <h4 class="card-title">Edit</h4>
-            <form method="POST" action="/urls/<%= shortURL %>">
-            <p class="card-text"><label for="longURL">Enter a URL:</label><input class="card-text" value="<%= longURL %>" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
-              <button type="submit" value="Update" class="btn btn-primary">Submit</button></p>
+          <form action="/urls/<%=shortURL%>" method="POST">
+            <p class="card-text"><label for="longURL">Enter a URL:</label><input class="card-text" type="text"
+                name="longURL" placeholder="http://" style="width: 300px; margin: 1em"><button type="submit"
+                value="Update" class="btn btn-primary">Update</button></p>
           </form>
         </div>
+        <!--
+          New URL: <input  value="<%= longURL %>" type="text" name="longURL" placeholder="http://">
+        <button type="submit">Submit</button> -->
 
 
         <!-- Bootstrap JS -->
