--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,26 +32,17 @@
         </thead>
         <tbody>
           <% for (let url in urlDatabase) { %>
-            <% if (user_id===urlDatabase[url].user_id) { %>
               <tr>
-                <td>
-                  <%= url %>
-                </td>
-                <td>
-                  <%= urlDatabase[url].longURL %>
-                </td>
-                <td>
-                  <form method="GET" action="/urls/<%=url%>"><button type="submit" value="update"
-                      class="btn btn-outline-primary">Edit</button></form>
-                  <!--<td><a href="/urls/<%=url%>"> <button type="submit" value="Update" class="btn btn-outline-primary"> Edit </button> </a></td>-->
-                </td>
-                <td>
-                  <form method="POST" action="/urls/<%=url%>/delete"><button type="submit"
-                      class="btn btn-outline-danger">Delete</button></form>
+                <td><%= url %></td>
+                <td><%= urlDatabase[url].longURL %></td>
+                  <td><a href="/urls/<%=url%>"> <button type="submit" value="Update" class="btn btn-outline-primary"> Edit </button> </a></td>
+                
+                <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-outline-primary">Delete</button></form>
                 </td>
               </tr>
-              <% } %>
-                <% }; %>
+            <% }; %>
+                  
+
         </tbody>
       </table>
       <a href="/urls/new"><button type="submit" class="btn btn-outline-primary">Shorten a New Link</button></a>
