--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -27,11 +27,14 @@
       </div>
       <div class="card-footer text-muted">
         <div class="card-body">
+
+
           <h4 class="card-title">Edit</h4>
           <form action="/urls/<%=shortURL%>" method="POST">
             <p class="card-text"><label for="longURL">Enter a URL:</label><input class="card-text" type="text"
-                name="longURL" placeholder="http://" style="width: 300px; margin: 1em"><button type="submit"
-                value="Update" class="btn btn-primary">Update</button></p>
+                name="longURL" placeholder="http://" value="<%= longURL %>" style="width: 300px; margin: 1em">
+                <button type="submit" value="Update" class="btn btn-primary">Update</button></p>
+                
           </form>
         </div>
         <!--
